# libModbusNovus

./: CMakeLists.txt  README.md  flake.nix
include/: libModbusNovus.h
resources/: LibModbusNovusConfig.cmake.in
src/: libModbusNovus.cpp  test.cpp
